Restaurant Spacing fix

--- a/wp-content/themes/neige/assets/css/_home.scss
+++ b/wp-content/themes/neige/assets/css/_home.scss
@@ -99,19 +99,19 @@
 
     h1 {
       position: relative;
-      width: 75%;
+      width: 500px;
       font-size: 56px;
       font-weight: 600;
     }
 
     h5 {
-      width: 60%;
+      width: 300px;
       font-weight: 500;
       padding-bottom: 20px;
     }
 
     p {
-      width: 75%;
+      width: 400px;
       padding-left: 10%;
     }
 
@@ -205,7 +205,7 @@
     img {
       position: relative;
       width: 126.3%;
-      aspect-ratio: 1;
+      aspect-ratio: 1.25;
       object-fit: cover;
 
       @include small-desktop {
@@ -290,7 +290,7 @@
 
 .float-img {
   position: relative;
-  height: 70vw;
+  height: 50vw;
   // aspect-ratio: 1.15;
   margin: 0 -12.5%;
   display: grid;
@@ -312,7 +312,7 @@
     left: 10%;
     // height: 60vh;
     aspect-ratio: 0.86;
-    width: 30%;
+    width: 25%;
 
     @include tablet {
       width: 100%;
@@ -339,7 +339,7 @@
     // position: relative;
     // height: 80vh;
     width: 35%;
-    aspect-ratio: 1.5;
+    aspect-ratio: 1;
     // left: 65%;
     // top: -30%;
 
